--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "prepare": "husky install"
   },
   "dependencies": {
+    "husky": "^8.0.3",
     "next": "14.0.4",
     "prettier": "^3.1.1",
     "react": "^18",
