--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "npm": ">=7.0.0",
     "yarn": "Please use npm instead of Yarn to install dependencies."
   },
+  "prisma": {
+    "schema": "./src/prisma/schema.prisma"
+  },
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
@@ -17,15 +20,22 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.27.6",
+    "@clerk/themes": "^1.7.9",
+    "@prisma/client": "^5.7.0",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "husky": "^8.0.3",
     "lucide-react": "^0.294.0",
+    "minimatch": "^9.0.3",
     "next": "14.0.4",
+    "next-themes": "^0.2.1",
     "prettier": "^3.1.1",
+    "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "svix": "^1.15.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -40,6 +50,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
+    "prisma": "^5.7.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
