--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
     "@clerk/nextjs": "^5.0.1",
     "@clerk/themes": "^1.7.9",
     "@prisma/client": "^5.7.0",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "apexcharts": "^3.45.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "flatpickr": "^4.6.13",
     "husky": "^8.0.3",
     "jsvectormap": "^1.5.3",
-    "apexcharts": "^3.45.2",
-    "flatpickr": "^4.6.13",
-    "react-apexcharts": "^1.4.1",
     "lucide-react": "^0.294.0",
     "minimatch": "^9.0.3",
     "next": "14.0.4",
@@ -39,6 +39,7 @@
     "prettier": "^3.1.1",
     "query-string": "^8.1.0",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "svix": "^1.15.0",
     "tailwind-merge": "^2.1.0",
