--- a/package.json
+++ b/package.json
@@ -22,10 +22,16 @@
     "@clerk/clerk-sdk-node": "^5.0.0",
     "@clerk/nextjs": "^5.0.1",
     "@clerk/themes": "^1.7.9",
+    "@headlessui/react": "^2.0.3",
+    "@heroicons/react": "^2.1.3",
+    "@mantine/core": "^7.10.0",
+    "@mantine/hooks": "^7.10.0",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/supabase-js": "^2.43.4",
+    "@tabler/icons-react": "^3.5.0",
     "apexcharts": "^3.45.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -34,13 +40,14 @@
     "jsvectormap": "^1.5.3",
     "lucide-react": "^0.294.0",
     "minimatch": "^9.0.3",
-    "next": "14.0.4",
+    "next": "^14.2.3",
     "next-themes": "^0.2.1",
     "prettier": "^3.1.1",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
+    "sharp": "^0.33.4",
     "svix": "^1.15.0",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
@@ -51,13 +58,16 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
+    "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.15.0",
+    "postcss-simple-vars": "^7.0.1",
     "prisma": "^5.13.0",
-    "tailwindcss": "^3.3.0",
+    "supabase": "^1.167.4",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
 }
