--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@clerk/clerk-sdk-node": "^5.0.0",
     "@clerk/nextjs": "^5.0.1",
     "@clerk/themes": "^1.7.9",
+    "@fullcalendar/daygrid": "^6.1.13",
+    "@fullcalendar/interaction": "^6.1.13",
+    "@fullcalendar/react": "^6.1.13",
+    "@fullcalendar/timegrid": "^6.1.13",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@mantine/core": "^7.10.0",
@@ -32,9 +36,11 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.43.4",
     "@tabler/icons-react": "^3.5.0",
+    "@types/react-big-calendar": "^1.8.9",
     "apexcharts": "^3.45.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "date-fns": "^3.6.0",
     "flatpickr": "^4.6.13",
     "husky": "^8.0.3",
     "jsvectormap": "^1.5.3",
@@ -46,6 +52,7 @@
     "query-string": "^8.1.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-big-calendar": "^1.12.2",
     "react-dom": "^18",
     "sharp": "^0.33.4",
     "svix": "^1.15.0",
@@ -55,6 +62,7 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
+    "@types/date-fns": "^2.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
