--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@fullcalendar/timegrid": "^6.1.13",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "@hookform/resolvers": "^3.6.0",
     "@mantine/core": "^7.10.0",
     "@mantine/hooks": "^7.10.0",
     "@prisma/client": "^5.13.0",
@@ -53,16 +54,24 @@
     "next": "^14.2.3",
     "next-themes": "^0.2.1",
     "prettier": "^3.1.1",
+    "primereact": "^10.6.6",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-big-calendar": "^1.12.2",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
+    "react-icons": "^5.2.1",
+    "react-input-mask": "^2.0.4",
+    "react-number-format": "^5.4.0",
+    "react-phone-input-2": "^2.15.1",
+    "resend": "^3.3.0",
     "sharp": "^0.33.4",
     "svix": "^1.15.0",
     "swiper": "^11.1.3",
     "tailwind-merge": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
@@ -71,6 +80,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-input-mask": "^3.0.5",
     "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
     "eslint": "^8",
