--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
   "extends": ["next", "next/core-web-vitals", "eslint:recommended"],
   "globals": {
-    "React": "readonly"
+    "React": "readonly",
+    "ChildNode": "readonly",
+    "ParentNode": "readonly"
   },
   "rules": {
     "no-unused-vars": [1, { "args": "after-used", "argsIgnorePattern": "^_" }]
