--- a/package.json
+++ b/package.json
@@ -31,26 +31,39 @@
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.6.0",
+    "@lexical/react": "^0.16.1",
+    "@liveblocks/client": "^2.3.0",
+    "@liveblocks/node": "^2.3.0",
+    "@liveblocks/react": "^2.3.0",
+    "@liveblocks/react-lexical": "^2.3.0",
+    "@liveblocks/react-ui": "^2.3.0",
     "@mantine/core": "^7.10.0",
     "@mantine/hooks": "^7.10.0",
     "@prisma/client": "^5.13.0",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@sentry/nextjs": "^8.19.0",
     "@supabase/supabase-js": "^2.43.4",
     "@tabler/icons-react": "^3.5.0",
     "@types/react-big-calendar": "^1.8.9",
     "apexcharts": "^3.45.2",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "flatpickr": "^4.6.13",
-    "framer-motion": "^11.2.6",
+    "framer-motion": "^11.3.12",
     "husky": "^8.0.3",
+    "jsm-editor": "^0.0.12",
     "jsvectormap": "^1.5.3",
+    "lexical": "^0.16.1",
     "lucide-react": "^0.294.0",
     "minimatch": "^9.0.3",
+    "nanoid": "^5.0.7",
     "next": "^14.2.3",
     "next-themes": "^0.2.1",
     "prettier": "^3.1.1",
@@ -70,7 +83,7 @@
     "sharp": "^0.33.4",
     "svix": "^1.15.0",
     "swiper": "^11.1.3",
-    "tailwind-merge": "^2.1.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
