--- a/package.json
+++ b/package.json
@@ -47,13 +47,16 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@sentry/nextjs": "^8.19.0",
     "@supabase/supabase-js": "^2.43.4",
     "@tabler/icons-react": "^3.5.0",
     "@types/react-big-calendar": "^1.8.9",
+    "@vercel/speed-insights": "^1.0.12",
     "apexcharts": "^3.45.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -83,6 +86,7 @@
     "react-number-format": "^5.4.0",
     "react-phone-input-2": "^2.15.1",
     "react-select": "^5.8.0",
+    "recharts": "^2.12.7",
     "resend": "^3.3.0",
     "sharp": "^0.33.4",
     "svix": "^1.15.0",
