--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "query-string": "^8.1.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.12.2",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -101,6 +102,7 @@
     "@types/date-fns": "^2.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "@types/react-input-mask": "^3.0.5",
     "autoprefixer": "^10.4.19",
